@@ -21,6 +21,20 @@ task bintrayCredentialsCheck {
   }
 }
 
+def baseJvmArgs = [
+  "--illegal-access=warn",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "-XX:-MaxFDLimit"
+]
+project.ext.set("baseJvmArgs", baseJvmArgs)
+
 allprojects {
   apply plugin: "java"
   apply plugin: "jacoco"
@@ -48,9 +62,29 @@ allprojects {
     testCompile "junit:junit:${junitVersion}"
     testCompile "org.mockito:mockito-core:${mockitoVersion}"
   }
+  
+  compileJava {
+    options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
+  }
+
+  compileTestJava {
+    options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
+  }
+  
+  tasks.withType(JavaCompile) {
+    options.fork = true
+    options.incremental = true
+  }
+
+  test {
+    exclude "**/*IT.class"
+    jvmArgs += baseJvmArgs
+  }
 
   jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.3"
   }
   
   javadoc {
@@ -60,9 +94,9 @@ allprojects {
   }
 
   jacocoTestReport {
-    additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
-    sourceDirectories = files(sourceSets.main.allSource.srcDirs)
-    classDirectories = files(sourceSets.main.output)
+    additionalSourceDirs.from = files(sourceSets.main.allSource.srcDirs)
+    sourceDirectories.from = files(sourceSets.main.allSource.srcDirs)
+    classDirectories.from = files(sourceSets.main.output)
     reports {
       html.enabled true
       xml.enabled true
@@ -75,10 +109,10 @@ subprojects {}
 
 task jacocoRootReport(type: JacocoReport) {
   dependsOn = allprojects.test
-  additionalSourceDirs = files(allprojects.sourceSets.main.allSource.srcDirs)
-  sourceDirectories = files(allprojects.sourceSets.main.allSource.srcDirs)
-  classDirectories = files(allprojects.sourceSets.main.output)
-  executionData = files(allprojects.jacocoTestReport.executionData)
+  additionalSourceDirs.from = files(allprojects.sourceSets.main.allSource.srcDirs)
+  sourceDirectories.from = files(allprojects.sourceSets.main.allSource.srcDirs)
+  classDirectories.from = files(allprojects.sourceSets.main.output)
+  executionData.from = files(allprojects.jacocoTestReport.executionData)
   reports {
     html.enabled true
     xml.enabled true
@@ -88,7 +122,7 @@ task jacocoRootReport(type: JacocoReport) {
     true
   }
   doFirst {
-    executionData = files(executionData.findAll {
+    executionData.from = files(executionData.findAll {
       it.exists()
     })
   }
@@ -142,6 +176,10 @@ publishing {
   // invoke this task when ready to publish to Bintray
   bintrayUpload {
     dependsOn ":bintrayCredentialsCheck"
+    dependsOn "jar"
+    dependsOn "sourcesJar"
+    dependsOn "javadocJar"
+    dependsOn "generatePomFileForMavenJavaPublication"
   }
 }
 
